Fixed some issues with viewing on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -202,9 +202,25 @@ p {
 
 /* Media Queries */
 @media (max-width: 960px) {
+  .contact-page-box {
+    padding: 30px 0;
+  }
+
   .content {
     text-align: center;
     padding: 0;
+  }
+
+  .content h1 {
+    font-size: 50px;
+  }
+
+  .content-container {
+    padding-bottom: 0;
+  }
+
+  .hero {
+    padding: 80px 20px;
   }
 
   .hero h1 {
@@ -217,10 +233,6 @@ p {
 
   h4 {
     font-size: 26px;
-  }
-
-  .hero {
-    padding: 80px 20px;
   }
 
   .project-description {
